# C4-compiler

./: CMakeLists.txt  README.md  email.txt  emails.txt
src/: main.cpp
src/ast/: Ast.cpp  Ast.h
src/codeGenerator/: CodeGenerator.cpp  CodeGenerator.h
src/helper/: Diagnostics.h  Symbol.h  Utils.cpp  Utils.h
src/helper/structs/: Node.cpp  Node.h  Token.cpp  Token.h
src/ir/: IR.cpp  IR.h  IRTypeNode.cpp  IRTypeNode.h
src/lexer/: Lexer.cpp  Lexer.h  TokenizeHelper.cpp  Tokenizer.cpp  Tokenizer.h
src/llvm/: Emitter.cpp  Emitter.h
src/parser/: Parser.cpp  Parser.h  parser_test.cpp
src/prettyPrint/: prettyPrint.cpp  prettyPrint.h
src/semantic/: Semantic.cpp  Semantic.h
test/lexer/: prettycopy.c  test_expr.c  test_expr2.c  test_expr3.c  test_rekursive_funktion.c
